--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "test-ci": "react-scripts test --env=jsdom --coverage",
     "eject": "react-scripts eject"
   }
 }
